k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-management-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-management-api
  template:
    metadata:
      labels:
        app: order-management-api
    spec:
      containers:
      - name: order-management-api
        image: order-service:latest
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: 1
            memory: 2Gi
          requests:
            cpu: 0.5
            memory: 1Gi
