k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-management-api-service
spec:
  selector:
    app: order-management-api
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
